--- a/.config
+++ b/.config
@@ -42,6 +42,6 @@ CONFIG_PACKAGE_luci-app-mwan3helper=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-udpxy=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
-# CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_luci-app-p910nd=y
