--- a/.config
+++ b/.config
@@ -1,6 +1,9 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7620=y
-CONFIG_TARGET_ramips_mt7620_DEVICE_xiaomi_miwifi-mini=y
+CONFIG_TARGET_ramips_mt7620_DEVICE_lenovo_newifi-y1s=y
+#CONFIG_DEFAULT_luci-app-vlmcsd=y                        
+#CONFIG_DEFAULT_luci-app-unblockmusic=y               
+#CONFIG_DEFAULT_luci-app-vsftpd=y                  
 CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb-wdm=y
@@ -44,3 +47,4 @@ CONFIG_PACKAGE_luci-app-p910nd=y
 CONFIG_PACKAGE_igmpproxy=y
 CONFIG_PACKAGE_omcproxy=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
+CONFIG_PACKAGE_tcpdump=y
