--- a/.config
+++ b/.config
@@ -1,18 +1,26 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7620=y
 CONFIG_TARGET_ramips_mt7620_DEVICE_lenovo_newifi-y1s=y
-#CONFIG_DEFAULT_luci-app-vlmcsd=y                        
-#CONFIG_DEFAULT_luci-app-unblockmusic=y               
-#CONFIG_DEFAULT_luci-app-vsftpd=y                  
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-base=y
+CONFIG_LUCI_JSMIN=y
+CONFIG_LUCI_CSSTIDY=y
+CONFIG_LUCI_LANG_zh_Hans=y
 CONFIG_PACKAGE_luci-compat=y
-CONFIG_PACKAGE_kmod-usb-core=y
+CONFIG_PACKAGE_luci-mod-admin-full=y
+CONFIG_PACKAGE_block-mount=y
+CONFIG_PACKAGE_cifsmount=y
+CONFIG_DEFAULT_kmod-usb-ohci=y
+CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-wdm=y
-CONFIG_PACKAGE_kmod-rt2800-soc=y
 CONFIG_DEFAULT_kmod-rt2800-soc=y
+CONFIG_PACKAGE_kmod-rt2800-soc=y
 CONFIG_PACKAGE_kmod-rt2800-usb=y
 CONFIG_PACKAGE_kmod-rt2x00-lib=y
-CONFIG_PACKAGE_kmod-rtl8xxxu=y
 CONFIG_PACKAGE_kmod-rtl8187=y
+CONFIG_PACKAGE_kmod-rtl8xxxu=y
+CONFIG_PACKAGE_luci-app-samba=y
+CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_kmod-ata-core=y
 CONFIG_PACKAGE_kmod-block2mtd=y
 CONFIG_PACKAGE_kmod-scsi-generic=y
@@ -20,8 +28,6 @@ CONFIG_PACKAGE_kmod-ata-ahci=y
 CONFIG_PACKAGE_kmod-fs-cifs=y
 CONFIG_PACKAGE_kmod-fs-nfs=y
 CONFIG_PACKAGE_kmod-fs-nfs-common=y
-CONFIG_DEFAULT_kmod-usb-ohci=y
-CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_kmod-usb-storage-uas=y
@@ -30,21 +36,11 @@ CONFIG_DEFAULT_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_PACKAGE_kmod-usb-printer=y
-CONFIG_PACKAGE_kmod-usb-net=y
-CONFIG_PACKAGE_kmod-usb-net-rndis=y
-CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
-CONFIG_PACKAGE_adb=y
-CONFIG_PACKAGE_luci-app-samba4=y
-CONFIG_SAMBA4_SERVER_NETBIOS=y
-CONFIG_PACKAGE_luci-app-mwan3=y
-#CONFIG_PACKAGE_luci-app-mwan3helper=y
-CONFIG_PACKAGE_luci-app-zerotier=y
-CONFIG_PACKAGE_luci-app-udpxy=y
-CONFIG_PACKAGE_luci-app-filetransfer=y
-#CONFIG_PACKAGE_ipv6helper=y
-CONFIG_PACKAGE_luci-app-usb-printer=y
-CONFIG_PACKAGE_luci-app-p910nd=y
-CONFIG_PACKAGE_igmpproxy=y
-CONFIG_PACKAGE_omcproxy=y
-CONFIG_PACKAGE_luci-app-cifs-mount=y
 CONFIG_PACKAGE_tcpdump=y
+CONFIG_PACKAGE_igmpproxy=y
+CONFIG_PACKAGE_luci-app-mwan3=y
+CONFIG_PACKAGE_luci-app-udpxy=y
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_e2fsprogs=y
+CONFIG_PACKAGE_socat=y
+CONFIG_PACKAGE_ipv6helper=y
